--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,24 @@
 sudo: required
+language: generic
+
 services:
   - docker
 
 before_install:
-  - docker build -t samcamcode/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t stephengrider/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true samcamcode/react-test npm test
+  - docker run -e CI=true stephengrider/react-test npm test
 
-after_success: 
-  - docker build -t samcamcode/multi-client ./client
-  - docker build -t samcamcode/multi-nginx ./nginx
-  - docker build -t samcamcode/multi-server ./server
-  - docker build -t samcamcode/multi-worker ./worker
-#  log in to docker cli
+after_success:
+  - docker build -t stephengrider/multi-client ./client
+  - docker build -t stephengrider/multi-nginx ./nginx
+  - docker build -t stephengrider/multi-server ./server
+  - docker build -t stephengrider/multi-worker ./worker
+  # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-# take these images and push them to docker hub
-  - docker push samcamcode/multi-client
-  - docker push samcamcode/multi-nginx
-  - docker push samcamcode/multi-server
-  - docker push samcamcode/multi-worker
+  # Take those images and push them to docker hub
+  - docker push stephengrider/multi-client
+  - docker push stephengrider/multi-nginx
+  - docker push stephengrider/multi-server
+  - docker push stephengrider/multi-worker
