--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ after_success:
     app: multi-docker
     env: MultiDocker-env
     bucket_name: elasticbeanstalk-us-east-1-121852036586
-    bucket_path: docker-multi
+    bucket_path: multi-docker
     on:
       branch: master
     access_key_id: $AWS_ACCESS_KEY
